cluster/base/infrastructure/intel-gpu-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: intel-gpu-plugin
  namespace: kube-system
  labels:
    app: intel-gpu-plugin
spec:
  selector:
    matchLabels:
      app: intel-gpu-plugin
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: intel-gpu-plugin
    spec:
      containers:
      - name: intel-gpu-plugin
        image: intel/intel-gpu-plugin:0.37.1
        imagePullPolicy: IfNotPresent
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 40m
            memory: 45Mi
          limits:
            cpu: 100m
            memory: 90Mi
        volumeMounts:
        - name: devfs
          mountPath: /dev/dri
          readOnly: true
        - name: sysfsdrm
          mountPath: /sys/class/drm
          readOnly: true
        - name: kubeletsockets
          mountPath: /var/lib/kubelet/device-plugins
        - name: cdipath
          mountPath: /var/run/cdi
      volumes:
      - name: devfs
        hostPath:
          path: /dev/dri
      - name: sysfsdrm
        hostPath:
          path: /sys/class/drm
      - name: kubeletsockets
        hostPath:
          path: /var/lib/kubelet/device-plugins
      - name: cdipath
        hostPath:
          path: /var/run/cdi
          type: DirectoryOrCreate
      nodeSelector:
        kubernetes.io/arch: amd64
